; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/code/win32/extr_win_shared.c_IsKNI.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/code/win32/extr_win_shared.c_IsKNI.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@qtrue = common dso_local global i32 0, align 4
@qfalse = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @IsKNI to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @IsKNI() #0 {
  %1 = alloca i32, align 4
  %2 = alloca [4 x i32], align 16
  %3 = getelementptr inbounds [4 x i32], [4 x i32]* %2, i64 0, i64 0
  %4 = call i32 @CPUID(i32 1, i32* %3)
  %5 = getelementptr inbounds [4 x i32], [4 x i32]* %2, i64 0, i64 3
  %6 = load i32, i32* %5, align 4
  %7 = and i32 %6, 33554432
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %11

9:                                                ; preds = %0
  %10 = load i32, i32* @qtrue, align 4
  store i32 %10, i32* %1, align 4
  br label %13

11:                                               ; preds = %0
  %12 = load i32, i32* @qfalse, align 4
  store i32 %12, i32* %1, align 4
  br label %13

13:                                               ; preds = %11, %9
  %14 = load i32, i32* %1, align 4
  ret i32 %14
}

declare dso_local i32 @CPUID(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
